src/ts/tests/fixtures/invalid_modifiers/method.cloesce.ts
// @ts-nocheck
// InvalidApiMethodModifier

@Model()
export class Foo {
  id: number;

  @POST
  private method() {}
}
